[tool.poetry]
name = "observersary"
version = "0.1.0"
description = "Code for research on observed adversary"
authors = ["Eugene Lim"]
license = "MIT"

[tool.poetry.dependencies]
box2d-py = "^2.3.8"
gym = "^0.21"
numpy = "^1.23.0"
opencv-python = "^4.6.0"
pygame = "^2.1.2"
pyglet = "^1.5.26"
python = "^3.9"
stable-baselines3 = "^1.5.0"
tensorboard = "^2.9.1"
torch = "^1.12.0"
tqdm = "^4.64.0"
xvfbwrapper = "^0.2.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
toml = "^0.10.2"
yapf = "^0.32.0"

[tool.isort]
profile = "google"
line_length = 160

[tool.yapf]
based_on_style = "google"
column_limit = 160
spaces_around_power_operator = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
